Update 03 Running Pipelines on Vertex AI 2.5

--- a/Google Cloud/Smart Analytics, ML, AI/03 Running Pipelines on Vertex AI 2.5
+++ b/Google Cloud/Smart Analytics, ML, AI/03 Running Pipelines on Vertex AI 2.5
@@ -341,6 +341,7 @@ gsutil cp basic_pipeline.json gs://Project ID/pipeline-input/basic_pipeline.json
 Task 3. Execute the AI Pipeline
 From the Console, open the navigation menu (Navigation menu icon), under Artificial Intelligence click Vertex AI.
 Activate the Vertex AI API. Click the blue Enable Vertex AI API button.
+
 Once the API is enabled, click Pipelines in the left menu.
 Click Create Run on the top menu.
 Under Run detail, for Pipeline select Import from Cloud Storage from the dropdown and for Cloud Storage URL browse to the pipeline-input folder you created inside your project's cloud storage bucket. Select the basic_pipeline.json file.
@@ -351,9 +352,158 @@ You will be returned to the Pipeline dashboard and your run will progress from P
 Once the status reaches Succeeded, click on the run name to see the execution graph and details.
 https://cdn.qwiklabs.com/9Yq7O9lrOSx1mSVzyO9YTxb7B7CgPUWlv%2F3szbYKgac%3D
 
+
+
 A graph element exists for each step. Click on the concat object to see the details for the job.
 Click on the View Job button. A new tab will open with the Vertex AI Custom Job that was submitted to the backend to satisfy the pipeline request.
 https://cdn.qwiklabs.com/zjdFA8ES6xNLbcU5j3eup4ijGl8pJ4ZfNG5kU8zuGEA%3D
+
+concat
+Input Parameters
+Parameter	Type	Value
+a		string	stres
+b		string	sed
+Output Parameters
+Parameter	Type	Value
+Output		string	stressed
+
+caip_pipelines_3578654162201608192_-6250870663586775040
+Custom job was completed on Dec 28, 2022, 3:00:17 PM
+Status						Finished
+Custom job ID					8281827382080307200
+Created						Dec 28, 2022, 2:58:38 PM
+Start time					Dec 28, 2022, 2:59:47 PM
+Elapsed time					30 sec
+Region						us-central1
+Encryption type					Google-managed key
+Machine type (Worker pool 0 (chief))		e2-standard-4
+Machine count (Worker pool 0 (chief))		1
+Container Location (Worker pool 0 (chief))	python:3.7
+Arguments (Worker pool 0 (chief))
+--executor_input; {"inputs":{"parameterValues":{"a":"stres","b":"sed"},"parameters":{"a":{"stringValue":"stres"},"b":{"stringValue":"sed"}}},"outputs":{"outputFile":"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/concat_-6250870663586775040/executor_output.json","parameters":{"Output":{"outputFile":"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/concat_-6250870663586775040/Output"}}}}; --function_to_execute; concat
+Dataset						No managed dataset
+Algorithm					Custom training
+Objective					Custom
+Container (Training)				Custom
+
+{
+  "workerPoolSpecs": [
+    {
+      "machineSpec": {
+        "machineType": "e2-standard-4"
+      },
+      "replicaCount": "1",
+      "diskSpec": {
+        "bootDiskType": "pd-ssd",
+        "bootDiskSizeGb": 100
+      },
+      "containerSpec": {
+        "imageUri": "python:3.7",
+        "command": [
+          "sh",
+          "-c",
+          "\nif ! [ -x \"$(command -v pip)\" ]; then\n    python3 -m ensurepip || python3 -m ensurepip --user || apt-get install python3-pip\nfi\n\nPIP_DISABLE_PIP_VERSION_CHECK=1 python3 -m pip install --quiet     --no-warn-script-location 'kfp==1.8.8' && \"$0\" \"$@\"\n",
+          "sh",
+          "-ec",
+          "program_path=$(mktemp -d)\nprintf \"%s\" \"$0\" > \"$program_path/ephemeral_component.py\"\npython3 -m kfp.v2.components.executor_main                         --component_module_path                         \"$program_path/ephemeral_component.py\"                         \"$@\"\n",
+          "\nimport kfp\nfrom kfp.v2 import dsl\nfrom kfp.v2.dsl import *\nfrom typing import *\n\ndef concat(a: str, b: str) -> str:\n  return a + b\n\n"
+        ],
+        "args": [
+          "--executor_input",
+          "{\"inputs\":{\"parameterValues\":{\"a\":\"stres\",\"b\":\"sed\"},\"parameters\":{\"a\":{\"stringValue\":\"stres\"},\"b\":{\"stringValue\":\"sed\"}}},\"outputs\":{\"outputFile\":\"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/concat_-6250870663586775040/executor_output.json\",\"parameters\":{\"Output\":{\"outputFile\":\"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/concat_-6250870663586775040/Output\"}}}}",
+          "--function_to_execute",
+          "concat"
+        ],
+        "env": [
+          {
+            "name": "VERTEX_AI_PIPELINES_RUN_LABELS",
+            "value": "{\"vertex-ai-pipelines-run-billing-id\":\"3578654162201608192\"}"
+          }
+        ]
+      }
+    }
+  ],
+  "serviceAccount": "802000798119-compute@developer.gserviceaccount.com"
+}
+
+
+
+
+
+
+
+
+reverse
+Input Parameters
+Parameter	Type	Value
+a		string	stressed
+Output Parameters
+Parameter	Type	Value
+after		string	desserts
+before		string	stressed
+
+
+caip_pipelines_3578654162201608192_7584187391695388672
+Custom job was completed on Dec 28, 2022, 3:02:04 PM.
+Status			Finished
+Custom job ID		7743647226609532928
+Created			Dec 28, 2022, 3:00:21 PM
+Start time		Dec 28, 2022, 3:01:33 PM
+Elapsed time		31 sec
+Region			us-central1
+Encryption type		Google-managed key
+Machine type (Worker pool 0 (chief))		e2-standard-4
+Machine count (Worker pool 0 (chief))		1
+Container Location (Worker pool 0 (chief))	python:3.7
+Arguments (Worker pool 0 (chief))
+--executor_input; {"inputs":{"parameterValues":{"a":"stressed"},"parameters":{"a":{"stringValue":"stressed"}}},"outputs":{"outputFile":"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/reverse_7584187391695388672/executor_output.json","parameters":{"after":{"outputFile":"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/reverse_7584187391695388672/after"},"before":{"outputFile":"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/reverse_7584187391695388672/before"}}}}; --function_to_execute; reverse
+Dataset				No managed dataset
+Algorithm			Custom training
+Objective			Custom
+Container (Training)		Custom
+
+
+{
+  "workerPoolSpecs": [
+    {
+      "machineSpec": {
+        "machineType": "e2-standard-4"
+      },
+      "replicaCount": "1",
+      "diskSpec": {
+        "bootDiskType": "pd-ssd",
+        "bootDiskSizeGb": 100
+      },
+      "containerSpec": {
+        "imageUri": "python:3.7",
+        "command": [
+          "sh",
+          "-c",
+          "\nif ! [ -x \"$(command -v pip)\" ]; then\n    python3 -m ensurepip || python3 -m ensurepip --user || apt-get install python3-pip\nfi\n\nPIP_DISABLE_PIP_VERSION_CHECK=1 python3 -m pip install --quiet     --no-warn-script-location 'kfp==1.8.8' && \"$0\" \"$@\"\n",
+          "sh",
+          "-ec",
+          "program_path=$(mktemp -d)\nprintf \"%s\" \"$0\" > \"$program_path/ephemeral_component.py\"\npython3 -m kfp.v2.components.executor_main                         --component_module_path                         \"$program_path/ephemeral_component.py\"                         \"$@\"\n",
+          "\nimport kfp\nfrom kfp.v2 import dsl\nfrom kfp.v2.dsl import *\nfrom typing import *\n\ndef reverse(a: str)->NamedTuple(\"outputs\", [(\"before\", str), (\"after\", str)]):\n  return a, a[::-1]\n\n"
+        ],
+        "args": [
+          "--executor_input",
+          "{\"inputs\":{\"parameterValues\":{\"a\":\"stressed\"},\"parameters\":{\"a\":{\"stringValue\":\"stressed\"}}},\"outputs\":{\"outputFile\":\"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/reverse_7584187391695388672/executor_output.json\",\"parameters\":{\"after\":{\"outputFile\":\"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/reverse_7584187391695388672/after\"},\"before\":{\"outputFile\":\"/gcs/qwiklabs-gcp-00-568fed827b86/pipeline-output/802000798119/basic-pipeline-20221228025703/reverse_7584187391695388672/before\"}}}}",
+          "--function_to_execute",
+          "reverse"
+        ],
+        "env": [
+          {
+            "name": "VERTEX_AI_PIPELINES_RUN_LABELS",
+            "value": "{\"vertex-ai-pipelines-run-billing-id\":\"3578654162201608192\"}"
+          }
+        ]
+      }
+    }
+  ],
+  "serviceAccount": "802000798119-compute@developer.gserviceaccount.com"
+}
+
+
 
 
 
